# pipper

./: LICENSE  README.md  pipper.py  pyproject.toml
.github/workflows/: publish.yml
docs/assets/: PLACE_BANNER_HERE.txt
